migrated to new constructor and zonedtimedate